# rag-document-qa-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py  services.py
tests/: test_api.py  test_evals_rag.py
