[project]
name = "ai-automation-agent-rag-expert"
version = "0.1.0"
description = "Optimized PDF extraction and token-aware chunking pipeline for LLM context windows (Pure Python)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.126.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
